
add_library(BinaryNode
  BinaryNode.cpp
  Assign.cpp
  TopLevels.cpp
  ArithmeticOperation.cpp
  ArithmeticOpFactory.cpp
  Add.cpp
  Subtract.cpp
  PP.cpp
  LARROW.cpp
  Mul.cpp
  Div.cpp
  RARROW.cpp
  # RelationalOperation.cpp
  # RelationalOpFactory.cpp
  # Equal.cpp
  # NotEqual.cpp
  # LessThan.cpp
  # GreaterThan.cpp
  # LessEqual.cpp
  # LessThan.cpp
  LogicOperation.cpp
  LogicOpFactory.cpp
  Or.cpp
  NotOr.cpp
  XOr.cpp
  And.cpp
  NotAnd.cpp
  # ApplyBody.cpp
  # ApplyToEach.cpp
  # Assign.cpp
  # FunctionCall.cpp
  # In.cpp
  # Let.cpp
  # Sequence.cpp
  # SequenceTail.cpp
  )
