
add_library(BinaryNode
  BinaryNode.cpp
  Assign.cpp
  TopLevels.cpp
  Tuple.cpp
  ArithmeticOperation.cpp
  ArithmeticOpFactory.cpp
  Add.cpp
  Subtract.cpp
  PP.cpp
  LARROW.cpp
  Mul.cpp
  Div.cpp
  RARROW.cpp
  RelationalOperation.cpp
  RelationalOpFactory.cpp
  Equal.cpp
  NotEqual.cpp
  LessThan.cpp
  GreaterThan.cpp
  LessEqual.cpp
  GreaterEqual.cpp
  LogicOperation.cpp
  LogicOpFactory.cpp
  Or.cpp
  NotOr.cpp
  XOr.cpp
  And.cpp
  NotAnd.cpp
  # ApplyToEach.cpp
  # Assign.cpp
  # Let.cpp
  Upt.cpp
  SequenceRef.cpp
  ApplyToEach.cpp
  Sequence.cpp
  FunctionCall.cpp
  ApplyBody.cpp
  In.cpp
  SequenceTail.cpp
  )
